--- a/src/Components/Herosection/Hero.module.css
+++ b/src/Components/Herosection/Hero.module.css
@@ -1,4 +1,4 @@
-.Hero_container {
+/* .Hero_container {
   position: relative;
   width: 100%;
   height: 80vh; 
@@ -24,4 +24,4 @@
 .Hero_text h1 {
   font-size: 3em; 
   margin: 0;
-}
+} */
