--- a/src/Components/NavbarComp/Navbar.module.css
+++ b/src/Components/NavbarComp/Navbar.module.css
@@ -1,31 +1,53 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;500;700&display=swap');
+
 .nav_container{
   width: 100%;
-  height: 100px;
+  max-width: 1430px;
+  height: 105px;
   background-color: #111827;
   display: flex;
-  justify-content: space-between;
-  margin: 0 auto;
+  overflow: hidden;
+  gap: 10px;
+ 
 }
 .nav_image{
-  width: 30%;
-  height: 40px;
-  margin: 0px auto;
-  margin-left:90px ;
-  justify-content: center;
+  width: 144px;
+  height: 30px;
+  margin-top: 35px;
+  margin-left: 50px;
+}
+
+.nav_image img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .nav_list{
-  display: flex;
   width: 700px;
-  list-style-type: none;
-  gap: 35px;
-  /* margin-top: 35px;
-  margin-left: 250px; */
-  
-}
-.nav_list a {
-  color: white; 
-  text-decoration: none; 
-  
+  height: 30px;
 
+  margin-top: 35px;
+  list-style-type: none;
+}
+
+.nav_list  {
+  display: flex;
+  gap: 20px;
+}
+.nav_list li{
+  width: auto;
+  height: 30px;
+  font-weight: 200;
+  font-size: 16px;
+  line-height: 30px;
+  font-family: Helvetica Neue;
+
+}
+
+.nav_list li a{
+  color: white;
+  text-decoration: none;
+  
 }
