--- a/src/Components/Herosection/Hero.module.css
+++ b/src/Components/Herosection/Hero.module.css
@@ -1,27 +1,52 @@
-/* .Hero_container {
-  position: relative;
+.Hero_container{
+  background-image: url(../../assets/Images/pimage_b.png);
+  background-size: cover;
+  height: 450px;
+  overflow: hidden;
   width: 100%;
-  height: 80vh; 
-  overflow: hidden;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.Hero_image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.Hero_text{
+  width: 80%;
+  height: 250px;
+  color: white;
+  gap: 15px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
 }
 
-.Hero_text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white; 
+
+.Hero_text h1{
   text-align: center;
-  padding: 20px;
+  font-family: 'Livvic', sans-serif;
+  font-weight: 500 ;
+  font-size: 32px;
+  line-height: 1.5;
+  
 }
 
-.Hero_text h1 {
-  font-size: 3em; 
-  margin: 0;
-} */
+.Hero_text p{
+  text-align: center;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  font-family: Raleway;
+}
+
+
+
+/* .Hero_text p{
+  width: 350x;
+  height: 32px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  border: 1px solid yellow;
+  box-sizing: border-box;
+  font-family: Raleway;
+} */  
