--- a/src/Components/NavbarComp/Navbar.module.css
+++ b/src/Components/NavbarComp/Navbar.module.css
@@ -3,19 +3,20 @@
 
 .nav_container{
   width: 100%;
-  max-width: 1430px;
-  height: 105px;
-  background-color: #111827;
+  height: 80px;
   display: flex;
+  background-color: #111827;
   overflow: hidden;
-  gap: 10px;
- 
+  justify-content: space-between;
+ max-width:100% ;
+
 }
+
 .nav_image{
-  width: 144px;
-  height: 30px;
-  margin-top: 35px;
-  margin-left: 50px;
+  width: 80px;
+  height: 40px;
+  margin-top: 30px;
+  margin-left: 25px;
 }
 
 .nav_image img{
@@ -25,23 +26,21 @@
 }
 
 .nav_list{
-  width: 700px;
-  height: 30px;
-
-  margin-top: 35px;
+  width: 500px;
+  height: 40px;
+  margin-top: 30px;
   list-style-type: none;
+  display: flex;
+  gap: 12px;
+ justify-content: center;
 }
 
-.nav_list  {
-  display: flex;
-  gap: 20px;
-}
 .nav_list li{
   width: auto;
   height: 30px;
   font-weight: 200;
-  font-size: 16px;
-  line-height: 30px;
+  font-size: 14px;
+  line-height: 1.5;
   font-family: Helvetica Neue;
 
 }
@@ -49,5 +48,23 @@
 .nav_list li a{
   color: white;
   text-decoration: none;
-  
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
